<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/product"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imv1"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/light1" />

        <TextView
            android:id="@+id/name1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/light1"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/imv1" />

        <LinearLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="1"
            app:layout_constraintTop_toBottomOf="@id/name1">

            <TextView
                android:id="@+id/unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="3dp"
                android:text="@string/unit"
                android:textColor="@color/yellow" />

            <TextView
                android:id="@+id/unitPrice1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".9"
                android:text="@string/unit_price"
                android:textColor="@color/yellow" />

            <ImageButton
                android:id="@+id/imbCart"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_weight=".1"
                android:background="@color/light_green"
                android:scaleType="fitCenter"
                android:src="@drawable/add_shopping_cart"
                android:contentDescription="@string/app_name"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>